--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pdf.js",
   "version": "2.0.0",
   "devDependencies": {
+    "natives": "^1.1.6",
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
